fix border on mobile view

--- a/src/components/NewsfeedSideBar/NewsfeedSideBar.css
+++ b/src/components/NewsfeedSideBar/NewsfeedSideBar.css
@@ -42,9 +42,9 @@
     }
 
     .Newsfeed-SideBar {
-        border-right: 1px gray solid;
         margin-left: 0px;
         padding: 0px 10px;
+        border-right: none;
         width: 100vw;
     }
 }
