--- a/src/components/ProfileSideBar/ProfileSideBar.css
+++ b/src/components/ProfileSideBar/ProfileSideBar.css
@@ -42,7 +42,7 @@
     }
 
     .Profile-SideBar {
-        border-right: 1px gray solid;
+        border-right: none;
         margin-left: 0px;
         padding: 0px 10px;
         width: 100vw;
